# landscape-creator

./: .gitignore  LICENSE  README.md  main.py  procedural_landscape_requirements.md  pyproject.toml  requirements.txt  setup.cfg
examples/: example_seeds.txt
src/: __init__.py
src/core/: __init__.py  materials.py  noise_generator.py  voxel_grid.py
src/export/: __init__.py  data_exporter.py  obj_exporter.py  ply_exporter.py
src/generators/: __init__.py  decoration_generator.py  plant_generator.py  terrain_generator.py
src/gui/: __init__.py  controls.py  main_window.py
src/rendering/: __init__.py  mesh_builder.py  viewport.py
tests/: __init__.py  conftest.py  test_export.py  test_generators.py  test_materials.py  test_noise.py  test_voxel_grid.py
