[metadata]
name = procedural-landscape
version = 1.0.0
description = Procedural 3D Voxel Landscape Generator

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.24.0
    noise>=1.2.2
    scipy>=1.10.0
    pyvista>=0.42.0
    trimesh>=3.23.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.0.0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,.venv
ignore = E203,W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
